Resolves: tdf#131562 decimal separator may not be surrounded by blanks

1 .
1 .2
1 . 2
1. 2
 . 2
. 2
are not numbers. But
 .2
is.

Change-Id: Ie2e0775852e13eee733d0fed3399cbd3d065d9fe
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/97895
Tested-by: Jenkins
Reviewed-by: Eike Rathke <erack@redhat.com>